@@ -1,7 +1,7 @@
 // -*- MPC -*-
 // $Id$
 
-project : taolib, pi {
+project : taolib, pi, avoids_corba_e_micro {
   after   += Dynamic_TP
   libs    += TAO_Dynamic_TP
 }
